CMAKE_MINIMUM_REQUIRED(VERSION 2.8.10)
PROJECT(libsteel C)
INCLUDE(VERSION.cmake)
SET(PROJECT_VERSION_MAJOR ${VERSION_MAJOR})
SET(PROJECT_VERSION_MINOR ${VERSION_MINOR})
SET(PROJECT_VERSION_PATCH ${VERSION_PATCH})
SET(PROJECT_COPYRIGHT_YEAR 2012)
SET(PROJECT_VERSION  ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH} )

ADD_SUBDIRECTORY(src)

ENABLE_TESTING()
ADD_SUBDIRECTORY(test)
